# cog-jasond-cdf

./: .env  pyproject.toml
admin/: client_ids.txt  users.csv
admin/bootstrap/: bootstrap-cli-config-pemex-dev.yml  bootstrap-cmds.sh  create_apps.sh  create_groups.sh  create_node_names.sh  delete_apps.sh
admin/scripts/: init.sh
cdf/: client.py  hello.py  label_fix.py  mv_bsee.py  utils.py
cdf/bsee/: ZZZ_load_ogora_timeseries_raw_batch.py  borehole_extractor.py  borehole_extractor_config.yaml  create_borehole_extraction_pipeline.py  create_timeseries_extraction_pipeline.py  timeseries_datapoints_to_cdf.py  timeseries_extractor.py  timeseries_extractor_config.py  timeseries_extractor_config.yaml  timeseries_extractor_preprocess.py  timeseries_headers_to_cdf.py
cdf/bsee/data/: labels.csv  mv_companies_active.txt  mv_companies_all.txt  mv_lease_area_block.txt  mv_lease_owners_main.txt
cdf/bsee/data/timeseries/: ogoradelimit.txt
cdf/bsee/transformations/: create-bsee-root.sql  well-assets-root.sql  well-assets.sql  well-header-prep.sql  wellbore-assets.sql
cdf/valhall/: 1.0-load_raw.py  2.1-valhall-assets.sql  2.2-valhall-timeseries-metadata.sql  3.0-load_pnid.py  4.0-load_3d.py  4.1-update_files_3d.py  99-replicate_timeseries_data.py  99.2.1-replicate_fetch_timeseries.py  99.2.2-replicate_timeseries_data.py
cdf/valhall/data/: source_assets.csv  source_timeseries.csv
docs/: 00-index.md  01-environment.md  02-data-extraction.md  03-data-transformation.md  bsee.md  grafana.md  valhall.md
